# GitLeaks-Guard-CLI

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: git.rs  gitleaks.rs  main.rs  utils.rs
src/commands/: init.rs  install.rs  mod.rs  scan.rs  status.rs  toggle.rs  update.rs  version.rs
