[package]
name = "gitleaks-guard"
version = "0.2.0"
edition = "2021"
authors = ["Ruslan"]
description = "Interactive CLI tool for automated gitleaks installation and pre-commit hook setup with beautiful UI"
license = "MIT"
repository = "https://github.com/ruslanlap/pre-commit-auto-script"

[[bin]]
name = "gitleaks-guard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
dialoguer = "0.11"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.12"
zip = "0.6"
comfy-table = "7.1"
chrono = "0.4"
semver = "1.0"
console = "0.15"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
